<resources>
    <string name="app_name">Calcuinercias</string>
    <string name="Mass">Mass</string>
    <string name="Length">Length</string>
    <string name="Height">Height</string>
    <string name="Width">Width</string>
    <string name="Density">Density</string>
    <string name="Distance">Distance</string>
    <string name="Radius">Radius</string>
    <string name="Radius_ext">Radius ext</string>
    <string name="Radius_in">Radius int</string>
    <string name="Language">Language</string>
    <string name="units_settings">Units Settings</string>


    <array name="all_titles">
        <item>Cilindre</item>
        <item>Cilindre Buit</item>
        <item>Con</item>
        <item>Esfera</item>
        <item>Simple</item>
        <item>Cub</item>
    </array>

</resources>
