<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="8"
    android:rowCount="14"
    android:padding="10dp"
    >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/titol_densitat"
        android:layout_toRightOf="@+id/diagrama"
        android:id="@+id/valor_densitat"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/Mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valor_densitat"
        android:layout_toRightOf="@+id/diagrama"
        android:layout_toEndOf="@+id/diagrama"
        android:id="@+id/titol_massa"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/titol_massa"
        android:layout_toRightOf="@+id/diagrama"
        android:id="@+id/valor_massa"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/im_altura" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_above="@+id/im_altura"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/im_amplada" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_above="@+id/im_amplada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/im_long" />

    <TextView
        android:text="@string/Length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/im_long"
        android:layout_toRightOf="@+id/im_long"
        android:layout_toEndOf="@+id/im_long"
        android:id="@+id/titol_long" />

    <TextView
        android:text="@string/Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_amplada"
        android:id="@+id/titol_altura"
        android:layout_toRightOf="@+id/im_altura"
        android:layout_alignRight="@+id/diagrama"
        android:layout_alignEnd="@+id/diagrama" />

    <TextView
        android:text="@string/Width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titol_amplada"
        android:layout_below="@+id/im_long"
        android:layout_toRightOf="@+id/im_amplada"
        
        android:layout_toEndOf="@+id/im_amplada" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/units_altura"
        android:layout_below="@+id/units_amplada"
        android:layout_toEndOf="@+id/valor_altura"
        android:layout_toRightOf="@id/valor_altura"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/units_amplada"
        android:layout_alignStart="@+id/units_amplada" />

    <TextView
        android:text="@string/Density"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titol_densitat"
        android:layout_alignTop="@+id/diagrama"
        android:layout_toRightOf="@+id/diagrama"
        android:layout_toEndOf="@+id/diagrama" />

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor_long"
        android:layout_below="@+id/titol_long"
        android:layout_above="@+id/im_amplada"
        android:layout_toLeftOf="@+id/units_long"
        android:layout_toRightOf="@+id/im_amplada"
        android:layout_toEndOf="@+id/im_amplada" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/units_long"
        android:layout_alignTop="@+id/titol_long"
        android:layout_alignBottom="@+id/valor_long"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor_amplada"
        android:layout_below="@+id/titol_amplada"
        android:layout_toRightOf="@+id/im_amplada"
        android:layout_toEndOf="@+id/im_amplada"
        android:layout_above="@+id/im_altura" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/units_amplada"
        android:layout_below="@+id/units_long"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/valor_amplada" />

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor_altura"
        android:layout_toRightOf="@+id/im_altura"
        android:layout_toEndOf="@+id/im_altura"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/titol_altura" />

    <ImageView
        android:layout_width="150dp"
        app:srcCompat="@mipmap/cub"
        android:id="@+id/diagrama"
        android:layout_height="150dp"
        android:layout_above="@+id/im_long"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_unitats_resultat"
        android:layout_alignBottom="@+id/resultat"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Cilindre buit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titol_pagina"
        android:textStyle="normal|bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="0"
        android:ems="10"
        android:id="@+id/resultat"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_below="@+id/titol_pagina"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/b_unitats_resultat"
        android:layout_toStartOf="@+id/b_unitats_resultat" />

</RelativeLayout>
